[gd_scene load_steps=40 format=2]

[ext_resource path="res://assets/img/UI/rating/S.png" type="Texture" id=1]
[ext_resource path="res://assets/img/UI/rating/A.png" type="Texture" id=2]
[ext_resource path="res://assets/img/UI/rating/B.png" type="Texture" id=3]
[ext_resource path="res://assets/img/UI/rating/C.png" type="Texture" id=4]
[ext_resource path="res://assets/img/UI/blasto/barra vita.png" type="Texture" id=5]
[ext_resource path="res://assets/img/UI/game over cornice.png" type="Texture" id=6]
[ext_resource path="res://assets/img/UI/blasto/cornice barra vita.png" type="Texture" id=7]
[ext_resource path="res://assets/img/UI/you win cornice.png" type="Texture" id=8]
[ext_resource path="res://assets/audio/ost/lvls city/lvl 2-city.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/img/UI/go_down.png" type="Texture" id=10]
[ext_resource path="res://assets/img/frontground/lvl desert/desert1 door.png" type="Texture" id=11]
[ext_resource path="res://assets/img/UI/blasto/icona numero vite.png" type="Texture" id=12]
[ext_resource path="res://assets/Scripts/Player/camera/cameraController.gd" type="Script" id=13]
[ext_resource path="res://assets/Scripts/FloorCreator.gd" type="Script" id=14]
[ext_resource path="res://assets/Scripts/UI/PlayerHealthBar.gd" type="Script" id=15]
[ext_resource path="res://assets/Scripts/UI/Rating.gd" type="Script" id=16]
[ext_resource path="res://assets/Scripts/Player/camera/CameraShake.gd" type="Script" id=17]
[ext_resource path="res://assets/Scripts/UI/OptionMenu.gd" type="Script" id=18]
[ext_resource path="res://scenes/pg/singleplayer/krogan.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/pg/singleplayer/asari group.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/pg/singleplayer/salarian.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/tile/metro/lvl 2 m/metro2Tile1.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/pg/Blasto.tscn" type="PackedScene" id=23]
[ext_resource path="res://assets/fonts/MainMenuFont.tres" type="DynamicFont" id=24]
[ext_resource path="res://assets/Scripts/Managers/SceneManager.gd" type="Script" id=25]
[ext_resource path="res://assets/Scripts/Managers/ost.gd" type="Script" id=26]
[ext_resource path="res://scenes/misc/TransitionScreen.tscn" type="PackedScene" id=27]
[ext_resource path="res://scenes/tile/metro/lvl 2 m/metro2Tile2.tscn" type="PackedScene" id=28]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 89.7126, 98.8925 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/Quickzag-rOzO.otf"

[sub_resource type="DynamicFont" id=4]
size = 130
outline_size = 2
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 100
outline_size = 2
font_data = SubResource( 3 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 53, 73 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 10 )
region = Rect2( 0, 73, 53, 73 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 10 )
region = Rect2( 0, 146, 53, 73 )

[sub_resource type="SpriteFrames" id=32]
animations = [ {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0, 0.72549, 0.164706, 1 )
border_width_top = 18
border_width_bottom = 23
border_color = Color( 0.839216, 0, 1, 1 )
shadow_color = Color( 1, 0.6, 0.6, 0.6 )

[node name="testing" type="Node2D"]
position = Vector2( 38, -456 )
__meta__ = {
"_edit_horizontal_guides_": [ 1020.87 ]
}

[node name="StageManager" type="Node2D" parent="."]
position = Vector2( -554, -554 )
script = ExtResource( 25 )
enemy_types = [ ExtResource( 20 ), ExtResource( 19 ), ExtResource( 21 ) ]
next_stage = "metro/LevelMetro3"
current_level = "metro/LevelMetro2"
horizonal_vertical = true
heightLevel = 550

[node name="MovingWall" type="StaticBody2D" parent="StageManager"]
position = Vector2( 2391, 1177 )
scale = Vector2( 0.58, 0.57 )
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="StageManager/MovingWall"]
position = Vector2( 0.000293732, 56.1404 )
scale = Vector2( 1, 2.75439 )
shape = SubResource( 1 )

[node name="AreaGo" type="Area2D" parent="StageManager/MovingWall"]
position = Vector2( -134.644, 53.3646 )
scale = Vector2( 1, 1.03052 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StageManager/MovingWall/AreaGo"]
position = Vector2( -5.23311, -4.12054 )
scale = Vector2( 1, 2.75439 )
shape = SubResource( 1 )

[node name="AreaGo2" type="Area2D" parent="StageManager/MovingWall"]
position = Vector2( 150, 53.3646 )
scale = Vector2( 1, 1.03052 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StageManager/MovingWall/AreaGo2"]
position = Vector2( -5.23311, -4.12054 )
scale = Vector2( 1, 2.75439 )
shape = SubResource( 1 )

[node name="Positions" type="Node" parent="StageManager"]

[node name="0" type="Position2D" parent="StageManager/Positions"]
position = Vector2( 60, 761.004 )
scale = Vector2( 0.58, 0.57 )

[node name="1" type="Position2D" parent="StageManager/Positions"]
position = Vector2( 1799, 855.7 )
scale = Vector2( 0.58, 0.57 )

[node name="2" type="Position2D" parent="StageManager/Positions"]
position = Vector2( 60, 1414.7 )
scale = Vector2( 0.58, 0.57 )

[node name="3" type="Position2D" parent="StageManager/Positions"]
position = Vector2( 1729.8, 1977.7 )
scale = Vector2( 0.58, 0.57 )

[node name="4" type="Position2D" parent="StageManager/Positions"]
position = Vector2( 60, 2500.7 )
scale = Vector2( 0.58, 0.57 )

[node name="5" type="Position2D" parent="StageManager/Positions"]
position = Vector2( 1729.8, 3067.4 )
scale = Vector2( 0.58, 0.57 )

[node name="6" type="Position2D" parent="StageManager/Positions"]
position = Vector2( 60, 3585.4 )
scale = Vector2( 0.58, 0.57 )

[node name="EnemiesSpawn" type="Node" parent="StageManager"]

[node name="0" type="Node" parent="StageManager/EnemiesSpawn"]

[node name="0" type="Node" parent="StageManager/EnemiesSpawn/0"]

[node name="1" type="Position2D" parent="StageManager/EnemiesSpawn/0/0"]
position = Vector2( 355, 878.7 )
scale = Vector2( 0.58, 0.57 )

[node name="2" type="Position2D" parent="StageManager/EnemiesSpawn/0/0"]
position = Vector2( 663, 878.648 )
scale = Vector2( 0.58, 0.57 )

[node name="3" type="Position2D" parent="StageManager/EnemiesSpawn/0/0"]
position = Vector2( 1063, 893.304 )
scale = Vector2( 0.58, 0.57 )

[node name="4" type="Position2D" parent="StageManager/EnemiesSpawn/0/0"]
position = Vector2( 1461.48, 883.976 )
scale = Vector2( 0.58, 0.57 )

[node name="1" type="Node" parent="StageManager/EnemiesSpawn/0"]

[node name="1" type="Position2D" parent="StageManager/EnemiesSpawn/0/1"]
position = Vector2( 216.8, 858.7 )
scale = Vector2( 0.58, 0.57 )

[node name="2" type="Position2D" parent="StageManager/EnemiesSpawn/0/1"]
position = Vector2( 638.407, 879.7 )
scale = Vector2( 0.58, 0.57 )

[node name="3" type="Position2D" parent="StageManager/EnemiesSpawn/0/1"]
position = Vector2( 937.211, 887.67 )
scale = Vector2( 0.58, 0.57 )

[node name="4" type="Position2D" parent="StageManager/EnemiesSpawn/0/1"]
position = Vector2( 1438.19, 879.064 )
scale = Vector2( 0.58, 0.57 )

[node name="1" type="Node" parent="StageManager/EnemiesSpawn"]

[node name="0" type="Node" parent="StageManager/EnemiesSpawn/1"]

[node name="1" type="Position2D" parent="StageManager/EnemiesSpawn/1/0"]
position = Vector2( 464.8, 1415.7 )
scale = Vector2( 0.58, 0.57 )

[node name="2" type="Position2D" parent="StageManager/EnemiesSpawn/1/0"]
position = Vector2( 664.6, 1436.7 )
scale = Vector2( 0.58, 0.57 )

[node name="3" type="Position2D" parent="StageManager/EnemiesSpawn/1/0"]
position = Vector2( 1253, 1420.7 )
scale = Vector2( 0.58, 0.57 )

[node name="5" type="Position2D" parent="StageManager/EnemiesSpawn/1/0"]
position = Vector2( 1528.6, 1431.7 )
scale = Vector2( 0.58, 0.57 )

[node name="1" type="Node" parent="StageManager/EnemiesSpawn/1"]

[node name="1" type="Position2D" parent="StageManager/EnemiesSpawn/1/1"]
position = Vector2( 499, 1430.7 )
scale = Vector2( 0.58, 0.57 )

[node name="2" type="Position2D" parent="StageManager/EnemiesSpawn/1/1"]
position = Vector2( 767, 1435 )
scale = Vector2( 0.58, 0.57 )

[node name="3" type="Position2D" parent="StageManager/EnemiesSpawn/1/1"]
position = Vector2( 980.01, 1418.57 )
scale = Vector2( 0.58, 0.57 )

[node name="4" type="Position2D" parent="StageManager/EnemiesSpawn/1/1"]
position = Vector2( 1381, 1426 )
scale = Vector2( 0.58, 0.57 )

[node name="2" type="Node" parent="StageManager/EnemiesSpawn"]

[node name="0" type="Node" parent="StageManager/EnemiesSpawn/2"]

[node name="1" type="Position2D" parent="StageManager/EnemiesSpawn/2/0"]
position = Vector2( 451.8, 1927.7 )
scale = Vector2( 0.58, 0.57 )

[node name="2" type="Position2D" parent="StageManager/EnemiesSpawn/2/0"]
position = Vector2( 651.8, 1964.7 )
scale = Vector2( 0.58, 0.57 )

[node name="3" type="Position2D" parent="StageManager/EnemiesSpawn/2/0"]
position = Vector2( 1347.8, 1964.7 )
scale = Vector2( 0.58, 0.57 )

[node name="5" type="Position2D" parent="StageManager/EnemiesSpawn/2/0"]
position = Vector2( 1429.7, 1972.4 )
scale = Vector2( 0.58, 0.57 )

[node name="1" type="Node" parent="StageManager/EnemiesSpawn/2"]

[node name="1" type="Position2D" parent="StageManager/EnemiesSpawn/2/1"]
position = Vector2( 265.8, 1937.7 )
scale = Vector2( 0.58, 0.57 )

[node name="2" type="Position2D" parent="StageManager/EnemiesSpawn/2/1"]
position = Vector2( 474.79, 1983.76 )
scale = Vector2( 0.58, 0.57 )

[node name="3" type="Position2D" parent="StageManager/EnemiesSpawn/2/1"]
position = Vector2( 1079.97, 1980.4 )
scale = Vector2( 0.58, 0.57 )

[node name="5" type="Position2D" parent="StageManager/EnemiesSpawn/2/1"]
position = Vector2( 1238.98, 1950.34 )
scale = Vector2( 0.58, 0.57 )

[node name="3" type="Node" parent="StageManager/EnemiesSpawn"]

[node name="0" type="Node" parent="StageManager/EnemiesSpawn/3"]

[node name="1" type="Position2D" parent="StageManager/EnemiesSpawn/3/0"]
position = Vector2( 423.8, 2515.7 )
scale = Vector2( 0.58, 0.57 )

[node name="2" type="Position2D" parent="StageManager/EnemiesSpawn/3/0"]
position = Vector2( 530.06, 2522.03 )
scale = Vector2( 0.58, 0.57 )

[node name="3" type="Position2D" parent="StageManager/EnemiesSpawn/3/0"]
position = Vector2( 1236.8, 2508.7 )
scale = Vector2( 0.58, 0.57 )

[node name="4" type="Position2D" parent="StageManager/EnemiesSpawn/3/0"]
position = Vector2( 1495.8, 2523.7 )
scale = Vector2( 0.58, 0.57 )

[node name="1" type="Node" parent="StageManager/EnemiesSpawn/3"]

[node name="1" type="Position2D" parent="StageManager/EnemiesSpawn/3/1"]
position = Vector2( 743.8, 2500.7 )
scale = Vector2( 0.58, 0.57 )

[node name="2" type="Position2D" parent="StageManager/EnemiesSpawn/3/1"]
position = Vector2( 679.241, 2521.85 )
scale = Vector2( 0.58, 0.57 )

[node name="3" type="Position2D" parent="StageManager/EnemiesSpawn/3/1"]
position = Vector2( 1319.24, 2505.85 )
scale = Vector2( 0.58, 0.57 )

[node name="4" type="Position2D" parent="StageManager/EnemiesSpawn/3/1"]
position = Vector2( 1815.8, 2505.34 )
scale = Vector2( 0.58, 0.57 )

[node name="4" type="Node" parent="StageManager/EnemiesSpawn"]

[node name="0" type="Node" parent="StageManager/EnemiesSpawn/4"]

[node name="1" type="Position2D" parent="StageManager/EnemiesSpawn/4/0"]
position = Vector2( 272.8, 3023 )
scale = Vector2( 0.58, 0.57 )

[node name="2" type="Position2D" parent="StageManager/EnemiesSpawn/4/0"]
position = Vector2( 423.42, 3039.64 )
scale = Vector2( 0.58, 0.57 )

[node name="3" type="Position2D" parent="StageManager/EnemiesSpawn/4/0"]
position = Vector2( 979.32, 3045 )
scale = Vector2( 0.58, 0.57 )

[node name="4" type="Position2D" parent="StageManager/EnemiesSpawn/4/0"]
position = Vector2( 1435, 3038 )
scale = Vector2( 0.58, 0.57 )

[node name="1" type="Node" parent="StageManager/EnemiesSpawn/4"]

[node name="1" type="Position2D" parent="StageManager/EnemiesSpawn/4/1"]
position = Vector2( 450.8, 3047.7 )
scale = Vector2( 0.58, 0.57 )

[node name="2" type="Position2D" parent="StageManager/EnemiesSpawn/4/1"]
position = Vector2( 648.431, 3040.58 )
scale = Vector2( 0.58, 0.57 )

[node name="3" type="Position2D" parent="StageManager/EnemiesSpawn/4/1"]
position = Vector2( 1288.43, 3024.58 )
scale = Vector2( 0.58, 0.57 )

[node name="4" type="Position2D" parent="StageManager/EnemiesSpawn/4/1"]
position = Vector2( 1522.8, 3055.7 )
scale = Vector2( 0.58, 0.57 )

[node name="5" type="Node" parent="StageManager/EnemiesSpawn"]

[node name="0" type="Node" parent="StageManager/EnemiesSpawn/5"]

[node name="1" type="Position2D" parent="StageManager/EnemiesSpawn/5/0"]
position = Vector2( 689.8, 3572.7 )
scale = Vector2( 0.58, 0.57 )

[node name="2" type="Position2D" parent="StageManager/EnemiesSpawn/5/0"]
position = Vector2( 881.8, 3600.7 )
scale = Vector2( 0.58, 0.57 )

[node name="3" type="Position2D" parent="StageManager/EnemiesSpawn/5/0"]
position = Vector2( 1521.8, 3584.7 )
scale = Vector2( 0.58, 0.57 )

[node name="4" type="Position2D" parent="StageManager/EnemiesSpawn/5/0"]
position = Vector2( 1761.8, 3580.7 )
scale = Vector2( 0.58, 0.57 )

[node name="1" type="Node" parent="StageManager/EnemiesSpawn/5"]

[node name="1" type="Position2D" parent="StageManager/EnemiesSpawn/5/1"]
position = Vector2( 609.8, 3573.7 )
scale = Vector2( 0.58, 0.57 )

[node name="2" type="Position2D" parent="StageManager/EnemiesSpawn/5/1"]
position = Vector2( 528.16, 3607.67 )
scale = Vector2( 0.58, 0.57 )

[node name="3" type="Position2D" parent="StageManager/EnemiesSpawn/5/1"]
position = Vector2( 1168.15, 3591.67 )
scale = Vector2( 0.58, 0.57 )

[node name="4" type="Position2D" parent="StageManager/EnemiesSpawn/5/1"]
position = Vector2( 1681.8, 3581.7 )
scale = Vector2( 0.58, 0.57 )

[node name="6" type="Node" parent="StageManager/EnemiesSpawn"]

[node name="2" type="Position2D" parent="StageManager/EnemiesSpawn/6"]
position = Vector2( 9213.8, 765.7 )
scale = Vector2( 0.58, 0.57 )

[node name="3" type="Position2D" parent="StageManager/EnemiesSpawn/6"]
position = Vector2( 9405.8, 901.7 )
scale = Vector2( 0.58, 0.57 )

[node name="4" type="Position2D" parent="StageManager/EnemiesSpawn/6"]
position = Vector2( 10045.8, 885.7 )
scale = Vector2( 0.58, 0.57 )

[node name="5" type="Position2D" parent="StageManager/EnemiesSpawn/6"]
position = Vector2( 10285.8, 773.7 )
scale = Vector2( 0.58, 0.57 )

[node name="EnemiesContainer" type="Node" parent="StageManager"]

[node name="GUI" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Sprite" type="Sprite" parent="GUI/UI"]
z_index = 2

[node name="SCORE" type="Control" parent="GUI/UI/Sprite"]
visible = false
margin_left = -52.9167
margin_top = 5.03967
margin_right = -52.9167
margin_bottom = 5.03967

[node name="TotalPoints" type="Label" parent="GUI/UI/Sprite/SCORE"]
margin_left = 939.303
margin_top = 913.0
margin_right = 939.303
margin_bottom = 1030.0
custom_colors/font_color = Color( 0.682353, 0, 0.901961, 1 )
custom_fonts/font = SubResource( 4 )
align = 1

[node name="TotalPoints2" type="Label" parent="GUI/UI/Sprite/SCORE"]
margin_left = 643.0
margin_top = 932.081
margin_right = 929.0
margin_bottom = 1022.08
custom_colors/font_color = Color( 0.682353, 0, 0.901961, 1 )
custom_fonts/font = SubResource( 5 )
text = "SCORE ....."
align = 1

[node name="Hit" type="Label" parent="GUI/UI/Sprite/SCORE"]
margin_left = 1107.0
margin_top = 726.0
margin_right = 1107.0
margin_bottom = 843.0
custom_colors/font_color = Color( 0.682353, 0, 0.901961, 1 )
custom_fonts/font = SubResource( 4 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hit2" type="Label" parent="GUI/UI/Sprite/SCORE"]
margin_left = 651.0
margin_top = 753.081
margin_right = 1095.0
margin_bottom = 843.081
custom_colors/font_color = Color( 0.682353, 0, 0.901961, 1 )
custom_fonts/font = SubResource( 5 )
text = "HIT rECEIVED ....."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kill" type="Label" parent="GUI/UI/Sprite/SCORE"]
margin_left = 1211.0
margin_top = 830.0
margin_right = 1211.0
margin_bottom = 947.0
custom_colors/font_color = Color( 0.682353, 0, 0.901961, 1 )
custom_fonts/font = SubResource( 4 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kill2" type="Label" parent="GUI/UI/Sprite/SCORE"]
margin_left = 651.0
margin_top = 841.081
margin_right = 1196.0
margin_bottom = 931.081
custom_colors/font_color = Color( 0.682353, 0, 0.901961, 1 )
custom_fonts/font = SubResource( 5 )
text = "ENEMIES KILLED ....."
align = 1

[node name="GAME OVER" type="Sprite" parent="GUI/UI"]
visible = false
position = Vector2( 958.351, 539.915 )
scale = Vector2( 1.00097, 1.00097 )
z_index = 1
texture = ExtResource( 6 )

[node name="WIN" type="Sprite" parent="GUI/UI"]
visible = false
position = Vector2( 963.059, 541.221 )
z_index = 1
texture = ExtResource( 8 )

[node name="Go" type="AnimatedSprite" parent="GUI/UI"]
visible = false
position = Vector2( 1480, 512 )
scale = Vector2( 2.89441, 2.84451 )
frames = SubResource( 32 )
playing = true

[node name="LifesList" type="Node2D" parent="GUI/UI"]

[node name="Blasto" type="Node2D" parent="GUI/UI/LifesList"]

[node name="Ceru1" type="Sprite" parent="GUI/UI/LifesList/Blasto"]
position = Vector2( 235, 140 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 12 )

[node name="Ceru2" type="Sprite" parent="GUI/UI/LifesList/Blasto"]
position = Vector2( 204, 140 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 12 )

[node name="Ceru3" type="Sprite" parent="GUI/UI/LifesList/Blasto"]
position = Vector2( 172, 140 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 12 )

[node name="HealthPlayerContainer" type="Node2D" parent="GUI/UI"]
script = ExtResource( 15 )

[node name="Blasto" type="Node2D" parent="GUI/UI/HealthPlayerContainer"]

[node name="ConiceBarraVita" type="Sprite" parent="GUI/UI/HealthPlayerContainer/Blasto"]
position = Vector2( 293.239, 82.7536 )
scale = Vector2( 0.295394, 0.289558 )
texture = ExtResource( 7 )

[node name="HealthBar" type="TextureProgress" parent="GUI/UI/HealthPlayerContainer/Blasto"]
margin_left = 146.0
margin_top = 57.0
margin_right = 1507.0
margin_bottom = 232.0
rect_scale = Vector2( 0.293, 0.296 )
max_value = 10.0
value = 10.0
texture_progress = ExtResource( 5 )

[node name="ShowedPoints" type="Label" parent="GUI/UI"]
margin_left = 1716.0
margin_top = 6.0
margin_right = 1716.0
margin_bottom = 123.0
custom_colors/font_color = Color( 0.682353, 0, 0.901961, 1 )
custom_fonts/font = SubResource( 4 )
align = 1

[node name="Rating" type="Control" parent="GUI/UI"]
margin_left = 1764.0
margin_top = 954.0
margin_right = 1804.0
margin_bottom = 994.0
script = ExtResource( 16 )
rate_list = [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ) ]
rate_points = [ 1200, 2400, 3600, 4800 ]

[node name="Sprite" type="Sprite" parent="GUI/UI/Rating"]
visible = false
scale = Vector2( 0.520833, 0.520833 )
z_index = 1
texture = ExtResource( 2 )

[node name="pauseMenu" type="Control" parent="GUI"]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 18 )

[node name="mainPauseMenu" type="Control" parent="GUI/pauseMenu"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ReturnBtn" type="Button" parent="GUI/pauseMenu/mainPauseMenu"]
margin_left = 895.843
margin_top = 370.715
margin_right = 1080.84
margin_bottom = 455.715
custom_colors/font_color = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 24 )
custom_styles/hover = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
action_mode = 0
text = "RETURN"

[node name="RestartLevelBtn" type="Button" parent="GUI/pauseMenu/mainPauseMenu"]
margin_left = 803.0
margin_top = 462.0
margin_right = 1164.0
margin_bottom = 547.0
custom_colors/font_color = Color( 0.682353, 0, 0.901961, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.235294, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 24 )
custom_styles/hover = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
action_mode = 0
text = "RESTART LEVEL"

[node name="OptionBtn" type="Button" parent="GUI/pauseMenu/mainPauseMenu"]
margin_left = 886.404
margin_top = 551.0
margin_right = 1082.4
margin_bottom = 636.0
custom_colors/font_color = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 24 )
custom_styles/hover = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
action_mode = 0
text = "OPTIONS"

[node name="MainMenuBtn" type="Button" parent="GUI/pauseMenu/mainPauseMenu"]
margin_left = 844.873
margin_top = 634.061
margin_right = 1123.87
margin_bottom = 719.061
custom_colors/font_color = Color( 0.682353, 0, 0.901961, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.235294, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 24 )
custom_styles/hover = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
action_mode = 0
text = "MAIN MENU"

[node name="QuitBtn" type="Button" parent="GUI/pauseMenu/mainPauseMenu"]
margin_left = 844.873
margin_top = 723.0
margin_right = 1123.87
margin_bottom = 808.0
custom_colors/font_color = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 24 )
custom_styles/hover = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
action_mode = 0
text = "QUIT"

[node name="OptionMenu" type="Control" parent="GUI/pauseMenu"]
visible = false
margin_left = -4.48981
margin_top = -204.288
margin_right = 35.5102
margin_bottom = -164.288

[node name="backToPauseBtn" type="Button" parent="GUI/pauseMenu/OptionMenu"]
margin_left = 1003.0
margin_top = 555.0
margin_right = 1337.0
margin_bottom = 651.0
custom_colors/font_color = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 24 )
custom_styles/hover = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
action_mode = 0
text = "BACK"

[node name="checkFullscreen" type="CheckBox" parent="GUI/pauseMenu/OptionMenu"]
margin_left = 561.0
margin_top = 554.0
margin_right = 819.0
margin_bottom = 651.0
mouse_filter = 1
custom_colors/font_color_disabled = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0.72549, 0.164706, 1 )
custom_fonts/font = ExtResource( 24 )
text = "FullScreen"

[node name="music" type="Label" parent="GUI/pauseMenu/OptionMenu"]
margin_left = 561.0
margin_top = 675.0
margin_right = 721.0
margin_bottom = 765.0
custom_colors/font_color = Color( 0.682353, 0, 0.901961, 1 )
custom_fonts/font = ExtResource( 24 )
text = "MUSIC"

[node name="MusicSlider" type="HSlider" parent="GUI/pauseMenu/OptionMenu"]
margin_left = 561.0
margin_top = 732.461
margin_right = 1339.55
margin_bottom = 855.459
custom_styles/slider = SubResource( 25 )
min_value = 0.001
max_value = 1.0
step = 0.001
value = 1.0

[node name="sfx" type="Label" parent="GUI/pauseMenu/OptionMenu"]
margin_left = 561.0
margin_top = 879.0
margin_right = 753.0
margin_bottom = 969.0
custom_colors/font_color = Color( 0.682353, 0, 0.901961, 1 )
custom_fonts/font = ExtResource( 24 )
text = "EFFECTS"

[node name="SFXSlider" type="HSlider" parent="GUI/pauseMenu/OptionMenu"]
margin_left = 561.0
margin_top = 930.0
margin_right = 1339.55
margin_bottom = 1053.0
custom_styles/slider = SubResource( 25 )
min_value = 0.001
max_value = 1.0
step = 0.001
value = 1.0

[node name="FadingSystem" parent="." instance=ExtResource( 27 )]

[node name="PlayersList" type="Node2D" parent="."]

[node name="Blasto" parent="PlayersList" instance=ExtResource( 23 )]
position = Vector2( 105, 1289 )
scale = Vector2( 1, 1 )

[node name="ost" type="AudioStreamPlayer" parent="." groups=["pausable"]]
pause_mode = 2
stream = ExtResource( 9 )
volume_db = 2.0
bus = "Music"
script = ExtResource( 26 )

[node name="floor" type="Node2D" parent="."]
position = Vector2( -424, 736 )
z_index = -2
script = ExtResource( 14 )
increment = 543
x = 150
n_positions = 6
horizonal_vertical = true
scenes = [ ExtResource( 28 ), ExtResource( 22 ) ]

[node name="desert1 door" type="Sprite" parent="."]
position = Vector2( 1120, 119 )
scale = Vector2( 0.995586, 0.405174 )
z_index = 5
texture = ExtResource( 11 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 329, 1208 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 379
limit_bottom = 1020
limit_smoothed = true
drag_margin_h_enabled = true
smoothing_enabled = true
drag_margin_left = 0.11
drag_margin_right = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 13 )
__meta__ = {
"_editor_description_": ""
}

[node name="shake" type="Node2D" parent="Camera2D"]
script = ExtResource( 17 )

[connection signal="fading" from="StageManager" to="FadingSystem" method="_on_StageManager_fading"]
[connection signal="area_entered" from="StageManager/MovingWall/AreaGo" to="PlayersList/Blasto" method="_on_AreaGo_area_entered"]
[connection signal="area_entered" from="StageManager/MovingWall/AreaGo2" to="PlayersList/Blasto" method="_on_AreaGo_area_entered"]
[connection signal="value_changed" from="GUI/UI/HealthPlayerContainer/Blasto/HealthBar" to="PlayersList/Blasto" method="_on_HealthBar_value_changed"]
[connection signal="pressed" from="GUI/pauseMenu/mainPauseMenu/ReturnBtn" to="GUI/pauseMenu" method="_on_ReturnBtn_pressed"]
[connection signal="pressed" from="GUI/pauseMenu/mainPauseMenu/RestartLevelBtn" to="GUI/pauseMenu" method="_on_RestartLevelBtn_pressed"]
[connection signal="pressed" from="GUI/pauseMenu/mainPauseMenu/OptionBtn" to="GUI/pauseMenu" method="_on_OptionBtn_pressed"]
[connection signal="pressed" from="GUI/pauseMenu/mainPauseMenu/MainMenuBtn" to="GUI/pauseMenu" method="_on_MainMenuBtn_pressed"]
[connection signal="pressed" from="GUI/pauseMenu/mainPauseMenu/QuitBtn" to="GUI/pauseMenu" method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="GUI/pauseMenu/OptionMenu/backToPauseBtn" to="GUI/pauseMenu" method="_on_backToPauseBtn_pressed"]
[connection signal="toggled" from="GUI/pauseMenu/OptionMenu/checkFullscreen" to="GUI/pauseMenu" method="_on_checkFullscreen_toggled"]
[connection signal="value_changed" from="GUI/pauseMenu/OptionMenu/MusicSlider" to="GUI/pauseMenu" method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="GUI/pauseMenu/OptionMenu/SFXSlider" to="GUI/pauseMenu" method="_on_SFXSlider_value_changed"]
[connection signal="black_screen" from="FadingSystem" to="StageManager" method="_on_FadingSystem_black_screen"]
[connection signal="death" from="PlayersList/Blasto" to="StageManager" method="_on_Blasto_death"]
[connection signal="update_healthbar" from="PlayersList/Blasto" to="GUI/UI/HealthPlayerContainer" method="_on_Blasto_update_healthbar"]
